# SploitGPT

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Containerfile  Dockerfile  README.md  compose.yaml  container-entrypoint.sh  docker-compose.yml  docker-entrypoint.sh  install-legacy.sh  install.sh  pyproject.toml  requirements.txt  sploitgpt.sh
.github/workflows/: ci.yml
config/: litellm.yaml
data/: eval_dataset.jsonl  rag.index  rag.npy  rag_docs.json
docs/: ATTRIBUTIONS.md  HANDOFF.md  NETWORKING.md
docs/examples/: confirm_mode_example.py
proposals/llm_integration/: README.md  agent_patch.diff  boot_patch.diff  llm_abstraction.py  notes.md
proposals/llm_integration/tests/: test_llm_abstraction.py
scripts/: build_index.py  build_training_data.py  export_docs.py  firewall_setup.sh  gen_instructions.py  install.py  merge_lora.py  network_config.sh  prepare_training_data.py  run_agent_cli.sh  run_llm_proxy.sh  run_opencode.sh  sanity_network.sh  setup.py  smoke_docker.sh  start_stack.sh  stop_stack.sh  upload_to_hf.py  validate.sh  wait_and_sync.out  wait_and_sync.sh  wait_and_sync_models.out  wait_and_sync_models.sh
sploitgpt/: cli.py  db.py  design_assets.py
sploitgpt/agent/: __init__.py  agent.py  context.py  response.py
sploitgpt/core/: __init__.py  audit.py  boot.py  config.py  credentials.py  errors.py  ollama.py  scope.py
sploitgpt/knowledge/: __init__.py  atomic.py  attack.py  gtfobins.py  kali_tools_ingest.py  rag.py
sploitgpt/knowledge/sources/: kali_tools.md  methodology.md
sploitgpt/msf/: __init__.py  viewer.py
sploitgpt/tools/: __init__.py  cloud_gpu.py  commands.py  cve.py  intel.py  nuclei.py  payloads.py  psudohash.py  shodan.py  wordlists.py
sploitgpt/training/: __init__.py  collector.py  finetune.py  merge_and_quantize.py
sploitgpt/tui/: app.py
tests/: conftest.py  test_activity.py  test_agent_flow.py  test_agent_interaction.py  test_audit.py  test_clarification.py  test_cloud_gpu.py  test_config.py  test_confirm_logic_fixes.py  test_credentials.py  test_gtfobins.py  test_msf.py  test_msf_viewer.py  test_nuclei.py  test_rag.py  test_scope.py  test_session_resume.py  test_shodan.py  test_tool_catalog.py  test_tools.py  test_training.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothDDPOTrainer.py  UnslothSFTTrainer.py
