[project]
name = "sploitgpt"
version = "0.1.0"
description = "Autonomous AI Penetration Testing Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SploitGPT Contributors"}
]
keywords = ["pentesting", "security", "ai", "llm", "metasploit", "kali"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "textual>=0.89.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "msgpack>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "litellm>=1.50.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
training = [
    "unsloth>=2024.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "torch>=2.2.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
]

[project.scripts]
sploitgpt = "sploitgpt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "llama.cpp",
    "tmp_llama.cpp",
    "unsloth_compiled_cache",
    "_unsloth_sentencepiece_temp",
    "vendor",
    "third_party",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["sploitgpt"]
branch = true
omit = [
    "sploitgpt/training/*",
    "sploitgpt/tui/*",
    "sploitgpt/cli.py",
    "sploitgpt/__main__.py",
    "sploitgpt/knowledge/kali_tools_ingest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 40
show_missing = true
